<resources>
    <string name="app_name">Nourriture</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Drawer def -->
    <string name="user">MY PROFILE</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="recipes">RECIPES</string>
    <string name="groups">GROUPS</string>
    <string name="openDrawer">openDrawe</string>
    <string name="closeDrawer">closeDrawe</string>
    <string name="category">CATEGORY</string>
    <string name="logout">LOGOUT</string>


    <!-- Drawer anonymous -->
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>

    <!-- Login and Register Fragment -->
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="confirm_email">confirm email</string>
    <string name="password">password</string>
    <string name="label_login">Login</string>
    <string name="err_username_pattern">The username must be between 3 and 20 characters</string>
    <string name="err_username_empty">The username is required</string>
    <string name="err_email_pattern">Enter a valid email</string>
    <string name="err_email_confirm">Enter the same email</string>
    <string name="err_password_pattern">The password must be between 6 and 30 characters</string>
    <string name="err_password_empty">The password is required</string>

    <!-- Key shared pref -->
    <string name="token_pref">token</string>
    <string name="username_pref">username</string>
    <string name="user_id_pref">user_id</string>

    <!-- User profil Fragment -->
    <string name="basic_info">Basic informations</string>
    <string name="search_hint">Search …</string>
    <string name="search_hint_ingredient">Search Ingredients …</string>
    <string name="search_hint_recipes">Search Recipes …</string>


</resources>
